# Relay

./: .env.example  .gitignore  .nojekyll  .relay-state.json  .test-match.js  Anchor.toml  Cargo.toml  LANDING_PAGE_CONTENT_PROPOSAL.md  PRODUCTION_READINESS_PLAN.md  README.md  RENDER_API_DEPLOYMENT.md  Relay_Whitepaper.md  SECURITY.md  SHIELDED_RFQ_WHITEPAPER.md  SOLANA_NEW_APPLY_GRANT_DRAFT.md  SOLANA_NEW_GRANT_RESPONSE.md  SUPERTEAM_AGENTIC_ENGINEERING_GRANT_APPLICATION.md  asset-manifest.json  convert_pubkey.ts  decode_world.ts  deploy_devnet.ps1  fetch.ts  force_deploy.ps1  frontend_implementation_plan.md  index.html  package-lock.json  package.json  query_devnet.js  render.yaml  test_rpc.js  tsconfig.json  vercel.json
.github/workflows/: deploy.yml
.solana-new-skills/skills/: README.md
Frontend/: config-overrides.js  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.css  App.js  App.test.js  index.js  setupTests.js
archive/scratch/: test-flow.ts
clients/: asset-types.ts  rfq-protocol.ts  shielded-rfq.ts
docs/: architecture.md  audit.md  deployment.md  devnet-evidence.md  whitepaper.md
env/: devnet.env  mainnet.env
gitbook/: README.md  SUMMARY.md
gitbook/builders/: client-and-api-flow.md  devnet-mvp.md  environment-setup.md  testing-and-verification.md
gitbook/getting-started/: market-problem.md  product-principles.md  relay-in-90-seconds.md  what-is-relay.md
gitbook/operators/: desk-operations.md  risk-and-controls.md
gitbook/product/: institutional-workflows.md  private-otc-desk.md  private-secondary-market.md  shareable-rfq-links.md  supported-assets.md
gitbook/protocol/: architecture.md  compliance-and-buyer-clearance.md  components-and-systems.md  privacy-model.md  settlement.md  shielded-rfq-flow.md
gitbook/resources/: disclaimers.md  faq.md  glossary.md  trust-assumptions.md
programs-ecs/components/deal_terms/: Cargo.toml
programs-ecs/components/deal_terms/src/: lib.rs
programs-ecs/components/payment_routing_policy/: Cargo.toml
programs-ecs/components/payment_routing_policy/src/: lib.rs
programs-ecs/systems/attest_vesting_settlement/: Cargo.toml
programs-ecs/systems/attest_vesting_settlement/src/: lib.rs
scripts/: README.md  run-demo-api.ps1  verify-prod-ready.ps1  write-e2e-verification-artifact.ts
scripts/devnet/: deploy-devnet.ps1  force-deploy-devnet.ps1
scripts/utils/: convert_pubkey.ts  decode_world.ts  fetch.ts  query_devnet.js
server/: index.ts  kyc.ts  request-validation.ts
static/css/: main.0558b940.css  main.0558b940.css.map
static/js/: 787.4b4fa275.chunk.js.map  main.79fc9fdb.js  main.79fc9fdb.js.LICENSE.txt
tests/: request-validation.test.ts
ui/: LANDING_PAGE_SPEC.md  package-lock.json  package.json
ui/public/: index.html
ui/src/: App.js  index.js
(+134 files in other folders)
