[package]
name = "system_attest_vesting_settlement"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
test = false
doctest = false

[features]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = { workspace = true }
anchor-lang = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
relay_component_types = { path = "../../shared/component_types" }
